# offlinemaps

./: .gitattributes  .metadata  README.md  analysis_options.yaml  pubspec.yaml
.claude/: settings.local.json
.dart-tool/: CLIENT_ID  dart-flutter-telemetry-session.json
android/: build_log.txt  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  ValhallaWrapper.cpp  ValhallaWrapper.h  valhalla-jni.cpp
android/app/src/main/cpp/include/valhalla/: filesystem_utils.h
android/app/src/main/cpp/include/valhalla/midgard/: logging.h
android/app/src/main/cpp/include/valhalla/proto/: api.pb.h  common.pb.h  directions.pb.h  expansion.pb.h  incidents.pb.h  info.pb.h  isochrone.pb.h  matrix.pb.h  options.pb.h  sign.pb.h  status.pb.h  transit.pb.h  transit_fetch.pb.h  trip.pb.h
android/app/src/main/cpp/include/valhalla/tyr/: actor.h
assets/: regions.json
assets/style/: osm_liberty.json  style.json
docker/: docker-compose.yml  setup_osrm.sh
ios/: Podfile
ios/.claude/: settings.local.json
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/valhalla/: README.md  Valhalla.podspec
lib/: main.dart
lib/data/: india_states.dart
lib/download/: download_manager.dart  download_state.dart
lib/map/: guru_maps_style.dart  vector_tile_sanitizer.dart  vector_tile_server.dart
lib/models/: map_download_models.dart  map_region.dart  place.dart
lib/screens/: countries_screen.dart  download_manager_screen.dart  intro_screen.dart  states_screen.dart  vector_map_screen.dart
scripts/: build_offline_regions.sh  build_valhalla_ios.sh  setup_valhalla_deps.sh
test/: widget_test.dart
tool/: repair_single_layer_mbtiles.dart
(+221 files in other folders)
